fixed image src paths

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,9 +21,9 @@
 
     <section>
         <h2>Portfolio</h2>
-        <img src="assets/images/sam gig.jpg" alt="Sam on the keys"/>
-        <img src="assets/images/sam band.jpg" alt="Sam on the keys with Nyjrd Rah"/>
-        <img src="assets/images/ot" alt="Sam's cats Otis and Floyd">
+        <img src="assets/images/samgig.jpg" alt="Sam on the keys"/>
+        <img src="assets/images/samband.jpg" alt="Sam on the keys with Nyjrd Rah"/>
+        <img src="assets/images/otisandfloyd.jpg" alt="Sam's cats Otis and Floyd">
         <img src="assets/images/otisandfloydhug.jpg" alt="Sam's Cats Otis and Floyd">
     </section>
 </body>
