updated html of homepage to work with css

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 </head>
 
 <body>
-    <header>
+    <header class="clearfix">
 
         <h1>Sam Howard</h1>
 
         <nav>
-            <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
+            <a id="linkborder" href="index.html">About</a>
+            <a id="linkborder" href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
     <section>
-        <h2>About Me</h2>
+    <div class="contentarea">
         <div class="clearfix">
-        <img src="assets/images/sam.jpg" width="200px" alt="Sam Howard" />
+        <h2>About Me</h2>
+        <img src="assets/images/sam.jpg" class="profileimage" alt="Sam Howard" />
 
         <p>
             I am a musician, teacher and now an aspiring web developer in Dallas, Texas. Musically I enjoy playing jazz
@@ -36,6 +37,7 @@
             spirit of teamwork and collaboration that I have learned from working in bands to the tech field.
             As an active learner I am looking forward to learning more everyday throughout my career.
         </p>
+        </div>
     </div>
 </section>
     
