edited portfolio page images

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,9 +38,18 @@
             <img class="gallery" src="assets/images/otisandfloyd.jpg" alt="Sam's cats Otis and Floyd">
             <div class="text-block">Otis & Floyd</div>
         </div>
-            <img class="gallery" src="assets/images/otisandfloydhug.jpg" alt="Sam's Cats Otis and Floyd">
-        
+        <div class="clearfix">
         </div>
+        <div class="imgcontainer">
+            <img class="gallery" src="assets/images/otisandfloydhug.jpg" alt="Sam's Cats Otis and Floyd">
+        <div class="text-block">Cat Hug</div>
+        </div>
+        <div class="imgcontainer">
+            <img class="gallery" src="assets/images/neworleans.jpg" alt="In New Orleans">
+            <div class="text-block">New Orleans</div>
+        </div>
+       </div> 
+        
             </div>
     </section>
 </body>
