--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    <section>
+    <section class="wrapper">
     <div class="contentarea">
         <div class="clearfix">
         <h2>About Me</h2>
@@ -39,8 +39,9 @@
         </p>
         </div>
     </div>
+    <div class="push"></div>
 </section>
-    
+<footer class="footer"></footer>    
 </body>
 
 </html>
