--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <section>
+    <section class="wrapper">
         <div class="contentarea">
             <div class="clearfix">
             
@@ -51,6 +51,8 @@
        </div> 
         
             </div>
+            <div class="push"></div>
     </section>
+    <footer class="footer"></footer>
 </body>
 </html>
