--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <a href="contact.html">Contact</a>
     </nav>
 </header>
-<section>
+<section class="wrapper">
     <div class="contentarea">
     <h2>Contact</h2>
     
@@ -32,6 +32,8 @@
         <input class="submit" type="submit" value="Submit">
     </form>
     </div>
+    <div class="push"></div>
 </section>
+<footer class="footer"></footer>
 </body>
 </html>
