fixed header and footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="clearfix">
-
+        <div class="headercontainer">
         <h1>Sam Howard</h1>
 
         <nav>
@@ -19,6 +19,7 @@
             <a id="linkborder" href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </nav>
+        </div>
     </header>
     <section class="wrapper">
     <div class="contentarea">
