--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="clearfix">
-
+        <div class="headercontainer">
         <h1>Sam Howard</h1>
         
         <nav>
@@ -17,6 +17,7 @@
             <a id="linkborder" href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
         </nav>
+    </div>
     </header>
 
     <section class="wrapper">
