--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <header class="clearfix">
+    <div class="headercontainer">
     <h1>Sam Howard</h1>
 
     <nav>
@@ -16,6 +17,7 @@
         <a id="linkborder" href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
     </nav>
+</div>
 </header>
 <section class="wrapper">
     <div class="contentarea">
