--- a/index.html
+++ b/index.html
@@ -12,37 +12,40 @@
 <body>
     <header class="clearfix">
         <div class="headercontainer">
-        <h1>Sam Howard</h1>
+            <h1>Sam Howard</h1>
 
-        <nav>
-            <a id="linkborder" href="index.html">About</a>
-            <a id="linkborder" href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+            <nav>
+                <a id="linkborder" href="index.html">About</a>
+                <a id="linkborder" href="portfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
+            </nav>
         </div>
     </header>
     <section class="wrapper">
-    <div class="contentarea">
-        <div class="clearfix">
-        <h2>About Me</h2>
-        <img src="assets/images/sam.jpg" class="profileimage" alt="Sam Howard" />
+        <div class="contentarea">
+            <div class="clearfix">
+                <h2>About Me</h2>
+                <img src="assets/images/sam.jpg" class="profileimage" alt="Sam Howard" />
 
-        <p>
-            I am a musician, teacher and now an aspiring web developer in Dallas, Texas. Musically I enjoy playing jazz
-            and blues, as well as writing in many styles.
-            I have been teaching for over 5 years, and have taught students of all ages at several studios. I have
-            played in several bands in the Dallas/Fort Worth area, and enjoy collaboration.
-        </p>
-        <p>
-            As a developer I hope to bring creative and logical solutions to my workplace. I also would like to bring my
-            spirit of teamwork and collaboration that I have learned from working in bands to the tech field.
-            As an active learner I am looking forward to learning more everyday throughout my career.
-        </p>
+                <p>
+                    I am a musician, teacher and now an aspiring web developer in Dallas, Texas. Musically I enjoy
+                    playing jazz
+                    and blues, as well as writing in many styles.
+                    I have been teaching for over 5 years, and have taught students of all ages at several studios. I
+                    have
+                    played in several bands in the Dallas/Fort Worth area, and enjoy collaboration.
+                </p>
+                <p>
+                    As a developer I hope to bring creative and logical solutions to my workplace. I also would like to
+                    bring my
+                    spirit of teamwork and collaboration that I have learned from working in bands to the tech field.
+                    As an active learner I am looking forward to learning more everyday throughout my career.
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="push"></div>
-</section>
-<footer class="footer"></footer>    
+        <div class="push"></div>
+    </section>
+    <footer class="footer"></footer>
 </body>
 
 </html>
